<resources>
    <string name="app_name">AndroidNanodegree</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="my_nano_apps">My Nanodegree Apps</string>
    <string name="spotify_streamer_button_label">spotify streamer</string>
    <string name="main_activity_title">My App Portfolio</string>
    <string name="scores_app_button_label">scores_app</string>
    <string name="library_app_button_label">library app</string>
    <string name="build_it_bigger_button_label">build it bigger</string>
    <string name="xyz_reader_button_label">xyz reader</string>
    <string name="capstone_button_label">Capstone: my own app</string>
    <string name="toast_message">This button will launch my [TITLE] app!</string>
    <string name="app_title_tag_replacement">[TITLE]</string>
    <string name="capstone_app_name">Capstone</string>
    <string name="xyz_reader_app_name">XYZ Reader</string>
    <string name="build_it_bigger_app_name">Build It Bigger</string>
    <string name="library_app_name">Library App</string>
    <string name="scores_app_app_name">Football Scores</string>
    <string name="spotify_streamer_app_name">Spotify Streamer</string>
</resources>
