<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".NanodegreeMainActivity">

    <TextView
        style="@style/Base.TextAppearance.AppCompat.Headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/my_nano_apps" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1"></View>

    <Button
        android:id="@+id/main_spotify_button"
        style="@style/Base.Widget.AppCompat.Button"
        android:layout_width="@dimen/width_button_main"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_button_main"
        android:background="@color/bright_foreground_material_dark"
        android:text="@string/spotify_streamer_button_label"
        android:tag="@string/spotify_streamer_app_name"
        android:textAllCaps="true" />

    <Button
        android:id="@+id/main_scores_button"
        style="@style/Base.Widget.AppCompat.Button"
        android:layout_width="@dimen/width_button_main"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_button_main"
        android:background="@color/bright_foreground_material_dark"
        android:text="@string/scores_app_button_label"
        android:tag="@string/scores_app_app_name"
        android:textAllCaps="true" />

    <Button
        android:id="@+id/main_library_button"
        style="@style/Base.Widget.AppCompat.Button"
        android:layout_width="@dimen/width_button_main"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_button_main"
        android:background="@color/bright_foreground_material_dark"
        android:text="@string/library_app_button_label"
        android:tag="@string/library_app_name"
        android:textAllCaps="true" />

    <Button
        android:id="@+id/main_build_it_button"
        style="@style/Base.Widget.AppCompat.Button"
        android:layout_width="@dimen/width_button_main"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_button_main"
        android:background="@color/bright_foreground_material_dark"
        android:text="@string/build_it_bigger_button_label"
        android:tag="@string/build_it_bigger_app_name"
        android:textAllCaps="true" />

    <Button
        android:id="@+id/main_xyz_reader_button"
        style="@style/Base.Widget.AppCompat.Button"
        android:layout_width="@dimen/width_button_main"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_button_main"
        android:background="@color/bright_foreground_material_dark"
        android:text="@string/xyz_reader_button_label"
        android:tag="@string/xyz_reader_app_name"
        android:textAllCaps="true" />


    <Button
        android:id="@+id/main_capstone_button"
        style="@style/Base.Widget.AppCompat.Button"
        android:layout_width="@dimen/width_button_main"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_button_main"
        android:background="@android:color/holo_green_light"
        android:tag="@string/capstone_app_name"
        android:text="@string/capstone_button_label"
        android:textAllCaps="true" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="2"></View>
</LinearLayout>
